[gd_scene load_steps=19 format=3 uid="uid://dncgepmkc4jf4"]

[ext_resource type="Script" uid="uid://cpndvo858r5uf" path="res://Player/player.gd" id="1_37q80"]
[ext_resource type="Texture2D" uid="uid://p0up1j2hnvko" path="res://Textures/Player/player_sprite2.png" id="2_p5o4e"]
[ext_resource type="PackedScene" uid="uid://xy3cvpwdy828" path="res://Utility/hurt_box.tscn" id="3_gs51i"]
[ext_resource type="Texture2D" uid="uid://dx7xx6vfahxlq" path="res://Textures/GUI/exp_background.png" id="4_pbpj5"]
[ext_resource type="Texture2D" uid="uid://dlx33roiu0vlj" path="res://Textures/GUI/exp_progress.png" id="5_5ive2"]
[ext_resource type="AudioStream" uid="uid://rlhdbyjq2q3r" path="res://Audio/SoundEffect/levelup.ogg" id="7_wl7d2"]
[ext_resource type="FontFile" uid="uid://dlth4bsmavf24" path="res://Font/globet_bold.ttf" id="8_apopc"]
[ext_resource type="Texture2D" uid="uid://cj6a5rhwov14" path="res://Textures/GUI/healthbar.png" id="8_flesq"]
[ext_resource type="Texture2D" uid="uid://da53mspvqfxq4" path="res://Textures/GUI/health.png" id="9_uker1"]
[ext_resource type="AudioStream" uid="uid://carqvtnmy7e5p" path="res://Audio/SoundEffect/Victory.ogg" id="10_rwm3p"]
[ext_resource type="PackedScene" uid="uid://b7c7gsdx2rkjm" path="res://Utility/basic_button.tscn" id="12_i8esf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5htga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfi4i"]
size = Vector2(14.4, 21.6)

[sub_resource type="CircleShape2D" id="CircleShape2D_anwqc"]
radius = 370.951

[sub_resource type="CircleShape2D" id="CircleShape2D_p2554"]
radius = 34.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6vwp8"]
radius = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5htga"]
bg_color = Color(0.046510585, 0.00038310874, 0.25372905, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_apopc"]
bg_color = Color(0, 0.1882353, 0.38039216, 0.6039216)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 1

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_37q80")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_p5o4e")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_5htga")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_gs51i")]
collision_mask = 2
HurtBoxType = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_yfi4i")

[node name="Attack" type="Node2D" parent="."]

[node name="PulseLaserTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="PulseLaserAttackTimer" type="Timer" parent="Attack/PulseLaserTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="RocketTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="RocketAttackTimer" type="Timer" parent="Attack/RocketTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="PlasmaBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="PlasmaTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 4.0

[node name="PlasmaAttackTimer" type="Timer" parent="Attack/PlasmaTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_anwqc")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_p2554")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_6vwp8")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
self_modulate = Color(1, 1, 1, 0.6666667)
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 342.0
offset_right = 640.0
offset_bottom = 362.0
texture_under = ExtResource("4_pbpj5")
texture_progress = ExtResource("5_5ive2")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 540.0
offset_top = -340.0
offset_right = 640.0
offset_bottom = -320.0
theme_override_font_sizes/font_size = 14
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 304.0
offset_top = 200.0
offset_right = 336.0
offset_bottom = 204.0
value = 50.0
texture_over = ExtResource("8_flesq")
texture_progress = ExtResource("9_uker1")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5htga")

[node name="lbl_LevelUP" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("8_apopc")
text = "Choose an upgrade:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_wl7d2")
volume_db = -10.0

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 230.0
offset_top = -266.0
offset_right = 430.0
offset_bottom = -164.98999
theme_override_styles/panel = SubResource("StyleBoxFlat_apopc")

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("8_apopc")
text = "You died!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_rwm3p")
volume_db = -10.0

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_rwm3p")
volume_db = -10.0

[node name="btn_leaderboard" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_i8esf")]
layout_mode = 0
offset_left = 10.0
offset_top = 54.0
offset_right = 95.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 9
text = "Leaderboard"

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_i8esf")]
layout_mode = 0
offset_left = 105.0
offset_top = 54.0
offset_right = 190.0
offset_bottom = 78.0
theme_override_font_sizes/font_size = 9
text = "Menu"

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lblDifficulty" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 460.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 14
text = "Difficulty: Normal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 40.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/PulseLaserTimer" to="." method="_on_pulse_laser_timer_timeout"]
[connection signal="timeout" from="Attack/PulseLaserTimer/PulseLaserAttackTimer" to="." method="_on_pulse_laser_attack_timer_timeout"]
[connection signal="timeout" from="Attack/RocketTimer" to="." method="_on_rocket_timer_timeout"]
[connection signal="timeout" from="Attack/RocketTimer/RocketAttackTimer" to="." method="_on_rocket_attack_timer_timeout"]
[connection signal="timeout" from="Attack/PlasmaTimer" to="." method="_on_plasma_timer_timeout"]
[connection signal="timeout" from="Attack/PlasmaTimer/PlasmaAttackTimer" to="." method="_on_plasma_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_leaderboard" to="." method="_on_btn_leaderboard_click_end"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]

[editable path="HurtBox"]
